# onelake-shortcut-tools

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
onelake_shortcut_tools/: compat_test.py  compatibility_checker.py
